--- a/src/views/common/lnav.ejs
+++ b/src/views/common/lnav.ejs
@@ -15,18 +15,15 @@
 								</div>
 							</a>
 							<% if(loguser){ %>
-								<a class="Nav-link" href="/feed" aria-label="feed">
-									<div class="Nav-item-hover" id="feed"><svg viewBox="0 0 24 24">
+								<a class="Nav-link" href="/explore" aria-label="explore">
+									<div class="Nav-item-hover" id="explore"><svg viewBox="0 0 24 24">
 											<g>
 												<path
-													d="M19.75 22H4.25C3.01 22 2 20.99 2 19.75V4.25C2 3.01 3.01 2 4.25 2h15.5C20.99 2 22 3.01 22 4.25v15.5c0 1.24-1.01 2.25-2.25 2.25zM4.25 3.5c-.414 0-.75.337-.75.75v15.5c0 .413.336.75.75.75h15.5c.414 0 .75-.337.75-.75V4.25c0-.413-.336-.75-.75-.75H4.25z">
-												</path>
-												<path
-													d="M17 8.64H7c-.414 0-.75-.337-.75-.75s.336-.75.75-.75h10c.414 0 .75.335.75.75s-.336.75-.75.75zm0 4.11H7c-.414 0-.75-.336-.75-.75s.336-.75.75-.75h10c.414 0 .75.336.75.75s-.336.75-.75.75zm-5 4.11H7c-.414 0-.75-.335-.75-.75s.336-.75.75-.75h5c.414 0 .75.337.75.75s-.336.75-.75.75z">
+													d="M21 7.337h-3.93l.372-4.272c.036-.412-.27-.775-.682-.812-.417-.03-.776.27-.812.683l-.383 4.4h-6.32l.37-4.27c.037-.413-.27-.776-.68-.813-.42-.03-.777.27-.813.683l-.382 4.4H3.782c-.414 0-.75.337-.75.75s.336.75.75.75H7.61l-.55 6.327H3c-.414 0-.75.336-.75.75s.336.75.75.75h3.93l-.372 4.272c-.036.412.27.775.682.812l.066.003c.385 0 .712-.295.746-.686l.383-4.4h6.32l-.37 4.27c-.036.413.27.776.682.813l.066.003c.385 0 .712-.295.746-.686l.382-4.4h3.957c.413 0 .75-.337.75-.75s-.337-.75-.75-.75H16.39l.55-6.327H21c.414 0 .75-.336.75-.75s-.336-.75-.75-.75zm-6.115 7.826h-6.32l.55-6.326h6.32l-.55 6.326z">
 												</path>
 											</g>
 										</svg>
-										<div class="Nav-item">Feed</div>
+										<div class="Nav-item">Explore</div>
 									</div>
 								</a>
 								<a class="Nav-link" href="/notifications" aria-label="notifications">
@@ -51,17 +48,6 @@
 											</g>
 										</svg>
 										<div class="Nav-item">Profile</div>
-									</div>
-								</a>
-								<a class="Nav-link" href="/explore" aria-label="explore">
-									<div class="Nav-item-hover" id="explore"><svg viewBox="0 0 24 24">
-											<g>
-												<path
-													d="M21 7.337h-3.93l.372-4.272c.036-.412-.27-.775-.682-.812-.417-.03-.776.27-.812.683l-.383 4.4h-6.32l.37-4.27c.037-.413-.27-.776-.68-.813-.42-.03-.777.27-.813.683l-.382 4.4H3.782c-.414 0-.75.337-.75.75s.336.75.75.75H7.61l-.55 6.327H3c-.414 0-.75.336-.75.75s.336.75.75.75h3.93l-.372 4.272c-.036.412.27.775.682.812l.066.003c.385 0 .712-.295.746-.686l.383-4.4h6.32l-.37 4.27c-.036.413.27.776.682.813l.066.003c.385 0 .712-.295.746-.686l.382-4.4h3.957c.413 0 .75-.337.75-.75s-.337-.75-.75-.75H16.39l.55-6.327H21c.414 0 .75-.336.75-.75s-.336-.75-.75-.75zm-6.115 7.826h-6.32l.55-6.326h6.32l-.55 6.326z">
-												</path>
-											</g>
-										</svg>
-										<div class="Nav-item">Explore</div>
 									</div>
 								</a>
 								<a class="Nav-link" href="https://besocial.help" target="_blank">
@@ -186,69 +172,7 @@
 											<div class="Nav-item">Explore</div>
 										</div>
 									</a>
-									<a class="Nav-link" href="/rewards" aria-label="rewards">
-										<div class="Nav-item-hover" id="reward"><svg viewBox="0 0 168.594 168.594"
-												style="enable-background:new 0 0 168.594 168.594;">
-												<g>
-													<path
-														d="M84.297,0c-2.463,0-4.77,1.21-6.17,3.237C72.75,11.021,25.6,80.144,25.6,109.899c0.002,32.364,26.334,58.694,58.697,58.694c32.365,0,58.697-26.331,58.697-58.695c0-29.755-47.15-98.877-52.525-106.661C89.068,1.21,86.762,0,84.297,0z M84.297,153.594c-24.092,0-43.695-19.602-43.697-43.695c0-18.587,27.51-64.32,43.697-88.954c16.189,24.634,43.697,70.367,43.697,88.954C127.994,133.992,108.391,153.594,84.297,153.594z" />
-												</g>
-											</svg>
-											<div class="Nav-item">Reward Pool</div>
-										</div>
-									</a>
-									<a class="Nav-link" href="/staking" aria-label="staking">
-										<div class="Nav-item-hover" id="staking"><svg viewBox="0 0 101.15 122.88"
-												style="enable-background:new 0 0 101.15 122.88">
-												<g>
-													<path
-														d="M18.03,27.19c8.26,2.76,19.76,4.46,32.53,4.46c12.77,0,24.27-1.71,32.53-4.46c7.25-2.42,11.74-5.35,11.74-8.22 c0-2.87-4.48-5.8-11.74-8.22C74.83,8,63.33,6.29,50.56,6.29c-12.77,0-24.27,1.71-32.53,4.46C2.65,15.89,2.22,21.91,18.03,27.19 L18.03,27.19z M94.84,85.59c-2.58,1.77-5.87,3.32-9.76,4.62c-8.9,2.97-21.11,4.81-34.52,4.81c-13.41,0-25.62-1.84-34.52-4.81 c-3.84-1.28-7.11-2.82-9.68-4.55v18.85c0.57,2.67,4.92,5.37,11.67,7.62c8.26,2.76,19.76,4.46,32.53,4.46s24.27-1.71,32.53-4.46 c5.01-1.67,8.69-3.59,10.5-5.55c1.49-1.62,1.25-2.69,1.25-4.64V85.59L94.84,85.59z M0,18.97C0,13.1,6.13,8.12,16.04,4.81 C24.94,1.84,37.15,0,50.56,0c13.41,0,25.62,1.84,34.52,4.81c9.02,3.01,14.91,7.41,15.89,12.61c0.12,0.33,0.18,0.69,0.18,1.06v86.74 c0,6.01-11.49,11.33-16.07,12.86c-8.9,2.97-21.11,4.81-34.52,4.81c-13.41,0-25.62-1.84-34.52-4.81 c-4.69-1.57-15.97-6.71-15.97-12.86c0-0.72,0-1.32,0-2.01C0.07,75.12,0,47.04,0,18.97L0,18.97z M6.36,76.64 c0.57,2.67,4.92,5.37,11.67,7.62c8.26,2.76,19.76,4.46,32.53,4.46s24.27-1.71,32.53-4.46c7.25-2.42,11.74-5.35,11.74-8.22h0.03 V57.73c-2.58,1.77-5.89,3.32-9.78,4.62c-8.9,2.97-21.11,4.81-34.52,4.81c-13.41,0-25.62-1.84-34.52-4.81 c-3.84-1.28-7.11-2.82-9.68-4.55V76.64L6.36,76.64z M6.36,48.78c0.57,2.67,4.92,5.37,11.67,7.62c8.26,2.76,19.76,4.46,32.53,4.46 s24.27-1.71,32.53-4.46c7.25-2.42,11.74-5.35,11.74-8.22h0.03V28.52c-2.58,1.77-5.89,3.32-9.78,4.62 c-8.9,2.97-21.11,4.81-34.52,4.81c-13.41,0-25.62-1.84-34.52-4.81c-3.84-1.28-7.11-2.82-9.68-4.55V48.78L6.36,48.78z" />
-												</g>
-											</svg>
-											<div class="Nav-item">Staking</div>
-										</div>
-									</a>
-									<a class="Nav-link" href="/lpmining" aria-label="lpmining">
-										<div class="Nav-item-hover" id="mining"><svg viewBox="0 0 512 512"
-												style="enable-background:new 0 0 512 512;">
-												<g>
-													<path d="M64,0C28.715,0,0,28.715,0,64s28.715,64,64,64s64-28.715,64-64S99.285,0,64,0z" />
-													<path
-														d="M64,192c-35.285,0-64,28.715-64,64s28.715,64,64,64s64-28.715,64-64S99.285,192,64,192z" />
-													<path
-														d="M64,384c-35.285,0-64,28.715-64,64c0,35.285,28.715,64,64,64s64-28.715,64-64C128,412.715,99.285,384,64,384z" />
-													<path d="M256,0c-35.285,0-64,28.715-64,64s28.715,64,64,64s64-28.715,64-64S291.285,0,256,0z" />
-													<path
-														d="M256,192c-35.285,0-64,28.715-64,64s28.715,64,64,64s64-28.715,64-64S291.285,192,256,192z" />
-													<path
-														d="M256,384c-35.285,0-64,28.715-64,64c0,35.285,28.715,64,64,64s64-28.715,64-64C320,412.715,291.285,384,256,384z" />
-													<path
-														d="M448,128c35.285,0,64-28.715,64-64S483.285,0,448,0c-35.285,0-64,28.715-64,64S412.715,128,448,128z" />
-													<path
-														d="M448,192c-35.285,0-64,28.715-64,64s28.715,64,64,64c35.285,0,64-28.715,64-64S483.285,192,448,192z" />
-													<path
-														d="M448,384c-35.285,0-64,28.715-64,64c0,35.285,28.715,64,64,64c35.285,0,64-28.715,64-64C512,412.715,483.285,384,448,384z" />
-												</g>
-											</svg>
-											<div class="Nav-item">LP Mining</div>
-										</div>
-									</a>
-									<a class="Nav-link" href="/witnesses" aria-label="witnesses">
-										<div class="Nav-item-hover" id="witnesses"><svg viewBox="0 0 512 512"
-												enable-background="new 0 0 512 512">
-												<g>
-													<path
-														d="m301.9,501h-91.7c-11.3,0-20.4-9.1-20.4-20.4v-34.7c-7.2-2.5-14.2-5.4-21.1-8.8l-24.6,24.6c-8,8-20.9,8-28.9,0l-64.8-64.8c-8-8-8-20.9 0-28.9l24.6-24.6c-3.3-6.9-6.3-13.9-8.8-21.1h-34.8c-11.3,0-20.4-9.1-20.4-20.4v-91.7c0-11.3 9.1-20.4 20.4-20.4h34.7c2.5-7.2 5.4-14.2 8.8-21.1l-24.5-24.7c-8-8-8-20.9 0-28.9l64.8-64.8c8-8 20.9-8 28.9,0l24.6,24.6c6.9-3.3 13.9-6.3 21.1-8.8v-34.7c0-11.3 9.1-20.4 20.4-20.4h91.7c11.3,0 20.4,9.1 20.4,20.4v34.7c7.2,2.5 14.2,5.4 21.1,8.8l24.6-24.5c8-8 20.9-8 28.9,0l64.8,64.8c3.8,3.8 6,9 6,14.4 0,5.4-2.2,10.6-6,14.4l-24.6,24.6c3.3,6.9 6.3,13.9 8.8,21.1h34.7c11.3,0 20.4,9.1 20.4,20.4v91.7c0,11.3-9.1,20.4-20.4,20.4h-34.7c-2.5,7.2-5.4,14.2-8.8,21.1l24.6,24.6c3.8,3.8 6,9 6,14.4 0,5.4-2.2,10.6-6,14.4l-64.8,64.8c-8,8-20.9,8-28.9,0l-24.6-24.6c-6.9,3.3-13.9,6.3-21.1,8.8v34.7c5.68434e-14,11.5-9.2,20.6-20.4,20.6zm-71.3-40.8h50.8v-29.4c0-9.3 6.3-17.4 15.3-19.8 14-3.7 27.5-9.3 40.1-16.7 8-4.7 18.2-3.4 24.7,3.2l20.8,20.8 35.9-35.9-20.8-20.8c-6.6-6.6-7.9-16.7-3.2-24.8 7.4-12.6 13-26.1 16.7-40.1 2.3-9 10.5-15.2 19.7-15.2h29.4v-50.8h-29.4c-9.3,0-17.4-6.3-19.7-15.2-3.7-14-9.3-27.5-16.7-40.1-4.7-8-3.4-18.2 3.2-24.7l20.8-20.8-35.9-35.9-20.8,20.8c-6.6,6.6-16.7,7.9-24.7,3.2-12.6-7.4-26.1-13-40.1-16.7-9-2.4-15.3-10.5-15.3-19.8v-29.7h-50.8v29.4c0,9.3-6.3,17.4-15.3,19.8-14,3.7-27.5,9.3-40.1,16.7-8,4.7-18.2,3.4-24.7-3.2l-20.8-20.8-35.9,35.9 20.8,20.8c6.6,6.6 7.9,16.7 3.2,24.7-7.4,12.6-13,26.1-16.7,40.1-2.4,9-10.5,15.3-19.8,15.3h-29.4v50.8h29.4c9.3,0 17.4,6.3 19.8,15.3 3.7,14 9.3,27.5 16.7,40.1 4.7,8 3.4,18.2-3.2,24.7l-20.8,20.8 35.9,35.9 20.8-20.8c6.6-6.6 16.8-7.9 24.7-3.2 12.6,7.4 26.1,13 40.1,16.7 9,2.4 15.3,10.5 15.3,19.8v29.6z" />
-												</g>
-												<g>
-													<path
-														d="m256,376.2c-66.3,0-120.2-53.9-120.2-120.2s53.9-120.2 120.2-120.2 120.3,53.9 120.3,120.2-54,120.2-120.3,120.2zm0-199.6c-43.8,0-79.4,35.6-79.4,79.4s35.6,79.4 79.4,79.4c43.8,0 79.4-35.6 79.4-79.4s-35.6-79.4-79.4-79.4z" />
-												</g>
-											</svg>
-											<div class="Nav-item">Witnesses</div>
-										</div>
-									</a>
-									<a class="Nav-link" href="https://besocial.help" target="_blank" aria-label="help">
+									<a class="Nav-link" href="/" target="_blank" aria-label="help">
 										<div class="Nav-item-hover" id="help"><svg viewBox="0 0 32 32">
 												<path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z" />
 												<circle cx="16" cy="23.5" r="1.5" />
@@ -305,14 +229,14 @@
 																	</path>
 																</g>
 															</svg></span></div>
-													<a class="more-menu-item more-item" href="/welcome"
-														aria-label="welcome"><span>Login</span><span><svg viewBox="0 0 24 24">
-																<g>
+													<a class="more-menu-item more-item" href="/welcome" aria-label="welcome">
+														<span>Login</span><span><svg viewBox="0 0 24 24"><g>
 																	<path
 																		d="M12 11.816c1.355 0 2.872-.15 3.84-1.256.814-.93 1.078-2.368.806-4.392-.38-2.825-2.117-4.512-4.646-4.512S7.734 3.343 7.354 6.17c-.272 2.022-.008 3.46.806 4.39.968 1.107 2.485 1.256 3.84 1.256zM8.84 6.368c.162-1.2.787-3.212 3.16-3.212s2.998 2.013 3.16 3.212c.207 1.55.057 2.627-.45 3.205-.455.52-1.266.743-2.71.743s-2.255-.223-2.71-.743c-.507-.578-.657-1.656-.45-3.205zm11.44 12.868c-.877-3.526-4.282-5.99-8.28-5.99s-7.403 2.464-8.28 5.99c-.172.692-.028 1.4.395 1.94.408.52 1.04.82 1.733.82h12.304c.693 0 1.325-.3 1.733-.82.424-.54.567-1.247.394-1.94zm-1.576 1.016c-.126.16-.316.246-.552.246H5.848c-.235 0-.426-.085-.552-.246-.137-.174-.18-.412-.12-.654.71-2.855 3.517-4.85 6.824-4.85s6.114 1.994 6.824 4.85c.06.242.017.48-.12.654z">
 																	</path>
 																</g>
-															</svg></span></a>
+															</svg></span>
+													</a>
 												</div>
 											</div>
 										</div>
@@ -320,8 +244,8 @@
 									<% } %>
 										<div class="Nav-main">
 											<% if(loguser){ %>
-												<div class="Nav-entry-link" id="logout_btn" data-ctModalTrigger="#tweet-modal">
-													<div class="Nav-main-btn">Logout</div>
+												<div class="Nav-entry-link" id="new_post_btn" data-ctModalTrigger="#tweet-modal">
+													<div class="Nav-main-btn">POST</div>
 												</div>
 												<% } else { %>
 													<div class="Nav-entry-link" id="main_login_btn">
