--- a/src/views/common/header.ejs
+++ b/src/views/common/header.ejs
@@ -16,9 +16,9 @@
 	<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');"
 		href="https://fonts.googleapis.com/css2?family=Assistant&amp;display=swap" />
 
-	<!-- please remove bootstrap if not needed, it is used in src/views/common/lnav.ejs -->
+	<!-- please remove bootstrap if not needed, it is used in src/views/common/lnav.ejs 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 </head>
 
 <body>
