--- a/src/views/common/home.ejs
+++ b/src/views/common/home.ejs
@@ -1,52 +1,64 @@
-<div class="inner-card-wrapper">
-  <div class="card-userPic-wrapper">
-    <a href="/profile/">
-      <!-- if user login show his profile picture -->
+<% articles.forEach(function(article) { 
+const IPFS_GATEWAY = 'https://gateway.ipfscdn.io/ipfs/';
+const userHandle = (article.profile.handle).replace('.lens', "")
+const userImg = article.profile.picture?.original?.url 
+const contentMedia = article.metadata.media
+%>
+  <div class="inner-card-wrapper">
+    <div class="card-userPic-wrapper">
+      <a href="/profile/<%- userHandle %>">
+        <% if(userImg){ %>
+        <img alt="" width="100%" height="49px" src="<%- userImg.replace('ipfs://', IPFS_GATEWAY); %>" class="home_pro_pic" />
+        <%}else{%>
         <img alt="" width="100%" height="49px" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" />
-    </a>
-  </div>
-  <div class="card-content-wrapper">
-    <div class="card-content-header">
-      <div class="card-header-detail">
-        <span class="card-header-username">
-          <a href="/profile/<%- %>"><b>AltcoinDailyio</b>  @AuthorName </a>
-        </span>
-        <span class="card-header-dot">·</span>
-        <span class="card-header-date">Few Minutes ago</span>
-      </div>
-    </div>
-    <div class="post-content"><p>Thinking for myself & doing my own research has made me the most money in #crypto. 🎯</p></div>
-    <div class="card-content-images">
-      <a href="/post/">
-        <div class="card-image-link">
-          <img alt="" src="https://i.postimg.cc/PJjXbLCP/new-design-for-banner.png" />
-        </div>
+        <%}%>
       </a>
     </div>
-    <div class="card-buttons-wrapper likes_section">
+    <div class="card-content-wrapper">
+      <div class="card-content-header">
+      <div class="card-header-detail">
+        <span class="card-header-username">
+          <b><%- article.profile?.name %></b><a href="/profile/<%-userHandle%>"> @<%- userHandle %></a></span>
+          <span class="card-header-dot">·</span>
+          <span class="card-header-date"><%- moment.utc(article.createdAt).fromNow() %></span>
+        </div>
+      </div>
+      <div class="post-content"><p><%- linkifyHtml(article.metadata?.content).replace(/(?:\r\n|\r|\n)/g, '<br>') %></p></div>
+      <% if(contentMedia.length !==0){ 
+        let mediaUrl = contentMedia[0].original?.url;
+        if(mediaUrl.includes('ipfs://')){mediaUrl=mediaUrl.replace('ipfs://', IPFS_GATEWAY)}else{mediaUrl=mediaUrl}%>
+      <div class="card-content-images">
+        <a href="/post/">
+          <div class="card-image-link">
+            <img alt="" src="<%- mediaUrl %>" />
+          </div>
+        </a>
+      </div>
+      <%}else{}%>
+      <div class="card-buttons-wrapper likes_section">
         <div class="card-button-wrap">
           <div class="card-icon" data-permlink="" data-author="">
             <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M1.751 10c0-4.42 3.584-8 8.005-8h4.366c4.49 0 8.129 3.64 8.129 8.13 0 2.96-1.607 5.68-4.196 7.11l-8.054 4.46v-3.69h-.067c-4.49.1-8.183-3.51-8.183-8.01zm8.005-6c-3.317 0-6.005 2.69-6.005 6 0 3.37 2.77 6.08 6.138 6.01l.351-.01h1.761v2.3l5.087-2.81c1.951-1.08 3.163-3.13 3.163-5.36 0-3.39-2.744-6.13-6.129-6.13H9.756z"></path></g></svg>
           </div>
-          <div class="card-icon-value">23</div>
+          <div class="card-icon-value"><%-article.stats.totalAmountOfComments%></div>
         </div>
         <div class="card-button-wrap">
           <div class="card-icon" data-permlink="" data-author="">
             <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M4.5 3.88l4.432 4.14-1.364 1.46L5.5 7.55V16c0 1.1.896 2 2 2H13v2H7.5c-2.209 0-4-1.79-4-4V7.55L1.432 9.48.068 8.02 4.5 3.88zM16.5 6H11V4h5.5c2.209 0 4 1.79 4 4v8.45l2.068-1.93 1.364 1.46-4.432 4.14-4.432-4.14 1.364-1.46 2.068 1.93V8c0-1.1-.896-2-2-2z"></path></g></svg>
           </div>
-          <div class="card-icon-value">823</div>
+          <div class="card-icon-value"><%-article.stats.totalAmountOfMirrors %></div>
         </div>
         <div class="card-button-wrap">
           <div class="card-icon" data-permlink="" data-author="">
             <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M16.697 5.5c-1.222-.06-2.679.51-3.89 2.16l-.805 1.09-.806-1.09C9.984 6.01 8.526 5.44 7.304 5.5c-1.243.07-2.349.78-2.91 1.91-.552 1.12-.633 2.78.479 4.82 1.074 1.97 3.257 4.27 7.129 6.61 3.87-2.34 6.052-4.64 7.126-6.61 1.111-2.04 1.03-3.7.477-4.82-.561-1.13-1.666-1.84-2.908-1.91zm4.187 7.69c-1.351 2.48-4.001 5.12-8.379 7.67l-.503.3-.504-.3c-4.379-2.55-7.029-5.19-8.382-7.67-1.36-2.5-1.41-4.86-.514-6.67.887-1.79 2.647-2.91 4.601-3.01 1.651-.09 3.368.56 4.798 2.01 1.429-1.45 3.146-2.1 4.796-2.01 1.954.1 3.714 1.22 4.601 3.01.896 1.81.846 4.17-.514 6.67z"></path></g></svg>
           </div>
-          <div class="card-icon-value">23</div>
+          <div class="card-icon-value"><%-article.stats?.totalUpvotes %></div>
         </div>
         <div class="card-button-wrap">
           <div class="card-icon" data-permlink="" data-author="">
-          <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M8.75 21V3h2v18h-2zM18 21V8.5h2V21h-2zM4 21l.004-10h2L6 21H4zm9.248 0v-7h2v7h-2z"></path></g></svg>
+          <svg viewBox="0 0 64 64" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"><title/><path d="M53.94,54.93H10.06a2,2,0,0,1-2-2V30.6a2,2,0,0,1,2-2H53.94a2,2,0,0,1,2,2V52.93A2,2,0,0,1,53.94,54.93Zm-41.88-4H51.94V32.6H12.06Z"/><path d="M49.94,32.6H14.06a2,2,0,0,1-2-2V19.83a2,2,0,0,1,2-2H49.94a2,2,0,0,1,2,2V30.6A2,2,0,0,1,49.94,32.6Zm-33.88-4H47.94V21.83H16.06Z"/><path d="M45.6,21.83H18.4a2,2,0,0,1-2-2V11.06a2,2,0,0,1,2-2H45.6a2,2,0,0,1,2,2v8.77A2,2,0,0,1,45.6,21.83Zm-25.2-4H43.6V13.06H20.4Z"/></svg>
           </div>
-          <div class="card-icon-value">678</div>
+          <div class="card-icon-value"><%-article.stats?.totalAmountOfCollects %></div>
         </div>
         <div class="card-button-wrap">
           <div class="card-icon" data-permlink="" data-author="">
@@ -54,6 +66,6 @@
           </div>
         </div>
       </div>
-
+    </div>
   </div>
-</div>
+<% }) %>
