--- a/src/views/common/home.ejs
+++ b/src/views/common/home.ejs
@@ -4,7 +4,7 @@ const userHandle = (article.profile.handle).replace('.lens', "")
 const userImg = article.profile.picture?.original?.url 
 const contentMedia = article.metadata.media
 const content = text_truncate(article.metadata?.content, 300)
-const linkyfyOptions = {truncate: 26,className:'blink',formatHref: {
+const linkyfyOptions = {truncate: 26,className:'blink',nl2br:true,formatHref: {
     hashtag: (val) => `/hashtag/${val.substr(1)}`,
     mention: (val) => `https://github.com/${val.substr(1)}`
   }}
@@ -19,7 +19,7 @@ const linkyfyOptions = {truncate: 26,className:'blink',formatHref: {
         <%}%>
       </a>
     </div>
-    <div class="card-content-wrapper">
+    <div class="card-content-wrapper" onclick="window.location.href='/post/<%- article.id %>'">
       <div class="card-content-header">
       <div class="card-header-detail">
         <span class="card-header-username">
