--- a/src/views/common/lnav.ejs
+++ b/src/views/common/lnav.ejs
@@ -25,7 +25,7 @@
 										</svg>
 										<div class="Nav-item">Explore</div>
 									</div>
-								</a> 
+								</a>
 								<a class="Nav-link" href="/notifications" aria-label="notifications">
 									<div class="Nav-item-hover pos_rel" id="notic" slot="position:relative;"><svg viewBox="0 0 24 24">
 											<g>
@@ -230,7 +230,8 @@
 																</g>
 															</svg></span></div>
 													<a class="more-menu-item more-item" href="/welcome" aria-label="welcome">
-														<span>Login</span><span><svg viewBox="0 0 24 24"><g>
+														<span>Login</span><span><svg viewBox="0 0 24 24">
+																<g>
 																	<path
 																		d="M12 11.816c1.355 0 2.872-.15 3.84-1.256.814-.93 1.078-2.368.806-4.392-.38-2.825-2.117-4.512-4.646-4.512S7.734 3.343 7.354 6.17c-.272 2.022-.008 3.46.806 4.39.968 1.107 2.485 1.256 3.84 1.256zM8.84 6.368c.162-1.2.787-3.212 3.16-3.212s2.998 2.013 3.16 3.212c.207 1.55.057 2.627-.45 3.205-.455.52-1.266.743-2.71.743s-2.255-.223-2.71-.743c-.507-.578-.657-1.656-.45-3.205zm11.44 12.868c-.877-3.526-4.282-5.99-8.28-5.99s-7.403 2.464-8.28 5.99c-.172.692-.028 1.4.395 1.94.408.52 1.04.82 1.733.82h12.304c.693 0 1.325-.3 1.733-.82.424-.54.567-1.247.394-1.94zm-1.576 1.016c-.126.16-.316.246-.552.246H5.848c-.235 0-.426-.085-.552-.246-.137-.174-.18-.412-.12-.654.71-2.855 3.517-4.85 6.824-4.85s6.114 1.994 6.824 4.85c.06.242.017.48-.12.654z">
 																	</path>
@@ -261,28 +262,31 @@
 						</nav>
 						<div class="bottom_user_part" id="bottom_user">
 							<div class="user_avater">
-								<img alt="" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" width="100%" height="49px">
+								<img alt="" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" width="100%"
+									height="49px">
 							</div>
 							<div class="user_name">
 								<h5>Abdullah</h5>
 								<span>@abdullah</span>
 							</div>
-							  <svg class="three_dot" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" class="bi bi-three-dots" viewBox="0 0 16 16">
-								<path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
-							  </svg>
+							<svg class="three_dot" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000"
+								class="bi bi-three-dots" viewBox="0 0 16 16">
+								<path
+									d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
+							</svg>
 
-							  <ul class="drop-up-menu" id="drop_up_menu">
+							<ul class="drop-up-menu" id="drop_up_menu">
 								<li><a href="#">Add an existing account</a></li>
 								<li><a href="#">Log out @mrhripon98</a></li>
-							  </ul>
+							</ul>
 						</div>
 
 						<script>
-							
+
 							// script for bottom user drop up menu
-							if(document.getElementById('bottom_user') !== null) {
+							if (document.getElementById('bottom_user') !== null) {
 								const bottom_user = document.getElementById('bottom_user');
-								bottom_user.addEventListener('click', function(e){
+								bottom_user.addEventListener('click', function (e) {
 									e.preventDefault();
 									this.classList.toggle('active')
 									const dropUpMenu = document.getElementById('drop_up_menu');
@@ -291,11 +295,11 @@
 							}
 
 							// Function for hide any user dropupmenu hide on outside click 
-							document.addEventListener('click', function(event) {
+							document.addEventListener('click', function (event) {
 								const bottom_user = document.getElementById('bottom_user');
 								if (!bottom_user.contains(event.target)) {
 									document.getElementById('drop_up_menu').classList.remove('show')
-								} 
+								}
 							});
 						</script>
 				</div>
@@ -468,7 +472,7 @@
 				<h4>
 					You have successfully connected to your wallet.
 					</br>
-					Please connect to the <a href="https://www.lens.xyz/" target="_blank">lens</a> now.
+					Please connect to the <a href="https://www.lens.xyz/" target="_blank" class="lens-link-color">lens</a> now.
 				</h4>
 			</div>
 			<div class="ct_modal_footer">
@@ -492,7 +496,8 @@
 				<h4>
 					Claim your lens profile 🌿
 					</br>
-					Visit <a href="https://claim.lens.xyz/" target="_blank">claiming site</a> to claim your profile now 🏃‍♂️
+					Visit <a href="https://claim.lens.xyz/" target="_blank" class="lens-link-color">claiming site</a> to claim
+					your profile now 🏃‍♂️
 				</h4>
 			</div>
 			<div class="ct_modal_footer">
