--- a/src/views/common/home.ejs
+++ b/src/views/common/home.ejs
@@ -19,7 +19,7 @@
       <%}%>
     </a>
   </div>
-  <div class="card-content-wrapper" onclick="window.location.href='/post/<%- article.id %>'">
+  <div class="card-content-wrapper" onclick="window.location.href='/<%-userHandle%>/status/<%-article.id%>'">
     <div class="card-content-header">
       <div class="card-header-detail">
         <span class="card-header-username">
