--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -1,6 +1,7 @@
 <%- include('./common/header')%>
 <%	
-	console.log(post)
+	//console.log(post)
+	console.log(comments)
 	const IPFS_GATEWAY = 'https://gateway.ipfscdn.io/ipfs/';
 	const userHandle = (post.profile.handle).replace('.lens', "")
 	const userImg = post.profile.picture?.original?.url 
@@ -88,6 +89,12 @@
 						        </div>
 						      </div>
 						    </div>
+
+
+
+						    <!--here comments -->
+
+						    <%- include('./common/comments') %>
 	                    </div>
 	                </div>
 				</div>
