--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,8 @@ body {
   counter-reset: Serial;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -20,7 +20,7 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-  monospace;
+    monospace;
 }
 
 * {
@@ -859,7 +859,7 @@ input:focus {
   z-index: 1000;
   overflow: hidden;
   box-shadow: 0 0 15px rgba(101, 119, 134, 0.2),
-  0 0 3px 1px rgba(101, 119, 134, 0.15);
+    0 0 3px 1px rgba(101, 119, 134, 0.15);
   display: flex;
   flex-direction: column;
 }
@@ -1230,7 +1230,7 @@ input:focus {
   display: flex;
   transition: 0.2s ease-in-out;
   will-change: background-color;
-  padding: 10px 15px; 
+  padding: 10px 15px;
 }
 
 .inner-card-wrapper:hover {
@@ -1273,7 +1273,10 @@ input:focus {
   color: rgb(15, 20, 25);
 }
 
-.card-header-username a{font-size: 15px;color: rgb(83, 100, 113);}
+.card-header-username a {
+  font-size: 15px;
+  color: rgb(83, 100, 113);
+}
 
 .card-header-dot {
   padding: 0 1px;
@@ -2268,7 +2271,7 @@ input:focus {
   font-weight: 600;
   border: 1px solid #e6ecf0;
   box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
-  0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+    0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
   display: inline-block;
   padding: 8px 14px;
   border-radius: 200px;
@@ -2620,7 +2623,7 @@ button.toast-close-button {
   box-sizing: border-box;
 }
 
-#toast-container>div {
+#toast-container > div {
   position: relative;
   overflow: hidden;
   margin: 0 0 6px;
@@ -2639,7 +2642,7 @@ button.toast-close-button {
   opacity: 0.8;
 }
 
-#toast-container>div:hover {
+#toast-container > div:hover {
   -moz-box-shadow: 0 0 12px #000;
   -webkit-box-shadow: 0 0 12px #000;
   box-shadow: 0 0 12px #000;
@@ -2647,15 +2650,15 @@ button.toast-close-button {
   cursor: pointer;
 }
 
-#toast-container.toast-bottom-center>div,
-#toast-container.toast-top-center>div {
+#toast-container.toast-bottom-center > div,
+#toast-container.toast-top-center > div {
   width: 320px;
   margin-left: auto;
   margin-right: auto;
 }
 
-#toast-container.toast-bottom-full-width>div,
-#toast-container.toast-top-full-width>div {
+#toast-container.toast-bottom-full-width > div,
+#toast-container.toast-top-full-width > div {
   width: 96%;
   margin-left: auto;
   margin-right: auto;
@@ -2708,7 +2711,7 @@ button.toast-close-button {
   width: 100%;
 }
 
-.input-group>.form-control:not(:first-child) {
+.input-group > .form-control:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -2728,12 +2731,12 @@ button.toast-close-button {
   background-color: #1da1f2 !important;
 }
 
-.input-group>.input-group-prepend>.input-group-text {
+.input-group > .input-group-prepend > .input-group-text {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.input-group>.form-control {
+.input-group > .form-control {
   position: relative;
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
@@ -3049,7 +3052,7 @@ button.toast-close-button {
   width: 100%;
 }
 
-.tanx_table tr>td {
+.tanx_table tr > td {
   padding: 8px;
 }
 
@@ -3422,7 +3425,7 @@ body.dark_mode .Nav-item-hover:hover svg {
 
 body.dark_mode .rewards_daily_sec {
   box-shadow: 0 0 15px rgba(101, 119, 134, 0.2),
-  0 0 3px 1px rgba(101, 119, 134, 0.15);
+    0 0 3px 1px rgba(101, 119, 134, 0.15);
 }
 
 body.dark_mode .database-icon svg,
@@ -3432,7 +3435,10 @@ body.dark_mode .witness-icon svg {
 }
 
 body.dark_mode body.dark_mode .edit-input-content input::-moz-placeholder,
-body.dark_mode body.dark_mode .edit-input-content input::-webkit-input-placeholder,
+body.dark_mode
+  body.dark_mode
+  .edit-input-content
+  input::-webkit-input-placeholder,
 body.dark_mode .form-control::-moz-placeholder,
 body.dark_mode .form-control::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.5);
@@ -3510,7 +3516,8 @@ body.dark_mode .reward_pool {
 }
 
 .back_btn {
-  background: url(https://img.icons8.com/windows/24/1da1f2/long-arrow-left.png) no-repeat;
+  background: url(https://img.icons8.com/windows/24/1da1f2/long-arrow-left.png)
+    no-repeat;
   vertical-align: middle;
 }
 
@@ -4049,7 +4056,7 @@ body.dark_mode .reward_pool {
   z-index: 1;
   transition: 0.2s ease;
   box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px,
-  rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
+    rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
   min-width: 230px;
   opacity: 0;
   visibility: hidden;
@@ -4333,7 +4340,6 @@ body.dark_mode .reward_pool {
 }
 
 @media screen and (max-width: 1285px) {
-
   .user_name,
   .three_dot {
     display: none;
@@ -4369,7 +4375,70 @@ body.dark_mode .reward_pool {
 }
 
 /* left user part css end */
-.blink {
-  color: rgb(29, 155, 240)
+
+/* reply-to-post part css start */
+.u-avater-out-grid {
+  display: grid;
+  grid-template-columns: 48px auto;
+  grid-gap: 7px;
+  padding-left: 16px;
+  padding-right: 16px;
+  align-items: flex-start;
 }
-@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&family=Noto+Sans:wght@500&family=PT+Sans:wght@700&display=swap');
+.reply-ttl {
+  font-size: 13px;
+  color: rgb(83, 100, 113);
+  font-weight: 500;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0;
+}
+.reply-to-post .reply-ttl {
+  margin-left: 71px;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+  margin-bottom: 5px;
+}
+
+.reply-ttl a {
+  color: rgb(15, 20, 25);
+  font-weight: 700;
+  display: inline-block;
+  transition: 0.2s;
+  margin-left: 3px;
+}
+.reply-to-post textarea {
+  scrollbar-width: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.reply-to-post.reply textarea {
+  margin-bottom: 20px;
+}
+.reply-to-post .ct_modal_footer .rd-btn {
+  transform: translateY(-12px);
+}
+.reply-to-post .ct_footer_left {
+  border-top: 0;
+  max-height: 0;
+  padding: 0;
+  overflow: hidden;
+  transition: 0.3s;
+  margin-left: -8px;
+}
+.reply-to-post .tweet_content {
+  position: relative;
+}
+.reply-to-post .rd-btn {
+  height: 34px;
+  font-size: 14px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+/* reply-to-post part css end */
+.blink {
+  color: rgb(29, 155, 240);
+}
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@500&family=Noto+Sans:wght@500&family=PT+Sans:wght@700&display=swap");
